--- a/src/main/java/org/entando/entando/plugins/jptoucantoco/apsadmin/portal/specialwidget/connector/package_it.properties
+++ b/src/main/java/org/entando/entando/plugins/jptoucantoco/apsadmin/portal/specialwidget/connector/package_it.properties
@@ -1,5 +1,6 @@
 jptoucantoco.title.connectorManagement=Connectors
 error.defaultLangTitle.required=Choose the widget title for the language {0}
-
-
+label.url=URL base istanza Toucan Toco  
+label.debug=Debug
+label.secret=Secret
 label.id=id
